--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,29 @@
             font-size: 2em; cursor: pointer; box-shadow: 0 4px 12px rgba(77, 115, 255, 0.4);
             display: flex; align-items: center; justify-content: center;
         }
-        .modal-overlay { /* ... estilos do modal ... */ }
+        .modal-overlay {
+            position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.7);
+            display: flex; align-items: center; justify-content: center; z-index: 1000;
+            opacity: 0; visibility: hidden; transition: opacity 0.3s, visibility 0.3s;
+        }
+        .modal-overlay.visible { opacity: 1; visibility: visible; }
+        .modal-content {
+            background-color: var(--cor-card); padding: 30px; border-radius: 12px; width: 90%;
+            max-width: 400px; box-shadow: 0 5px 20px rgba(0,0,0,0.4); transform: scale(0.95);
+            transition: transform 0.3s;
+        }
+        .modal-content h2 { margin-top: 0; color: var(--cor-texto-cabecalho); font-weight: 500; }
+        .modal-content input {
+            width: 100%; padding: 12px; margin: 15px 0; border-radius: 6px; border: 1px solid #3a3c5a;
+            background-color: var(--cor-terminal-fundo); color: var(--cor-texto); font-size: 1em; box-sizing: border-box;
+        }
+        .modal-actions { display: flex; justify-content: flex-end; gap: 10px; }
+        .modal-actions button {
+            padding: 10px 20px; border: none; border-radius: 6px; cursor: pointer;
+            font-weight: 500; transition: background-color 0.2s;
+        }
+        .modal-actions button[type="submit"] { background-color: var(--cor-primaria); color: white; }
+        .modal-actions button[type="button"] { background-color: #4a4c6a; color: var(--cor-texto); }
         
         footer {
             position: fixed; bottom: 0; left: 0; width: 100%;
@@ -145,7 +167,6 @@
                 enableTime: true,
                 dateFormat: "Y-m-d H:i",
                 time_24hr: true,
-                defaultDate: new Date()
             });
 
             // --- Funções de Renderização e UI ---
@@ -198,7 +219,7 @@
                 history.forEach(change => {
                     const eventMs = new Date(change.timestamp).getTime();
                     if (eventMs >= startMs && eventMs <= endMs) {
-                        const positionPercent = ((eventMs - startMs) / totalDurationMs) * 100;
+                        const positionPercent = totalDurationMs > 0 ? ((eventMs - startMs) / totalDurationMs) * 100 : 50;
                         const marker = document.createElement('div');
                         marker.className = 'timeline-marker';
                         marker.style.left = `${positionPercent}%`;
@@ -240,7 +261,6 @@
                     const hosts = await response.json();
                     dashboard.innerHTML = '';
                     hosts.forEach(host => renderHostCard(host));
-                    // Após renderizar, atualiza as timelines com o range ativo
                     updateAllTimelines(); 
                 } catch (error) {
                     console.error('Erro ao carregar hosts:', error);
@@ -264,7 +284,7 @@
                     startDate = startDatePicker.selectedDates[0];
                     endDate = endDatePicker.selectedDates[0];
                     if (!startDate || !endDate) {
-                        alert("Por favor, selecione uma data de início e fim.");
+                        alert("Por favor, selecione uma data de início e fim válidas.");
                         return;
                     }
                 }
@@ -279,12 +299,16 @@
                     controlButtons.forEach(btn => btn.classList.remove('active'));
                     button.classList.add('active');
                     startDatePicker.clear();
-                    endDatePicker.setDate(new Date());
+                    endDatePicker.clear();
                     updateAllTimelines();
                 });
             });
 
             filterBtn.addEventListener('click', () => {
+                if(startDatePicker.selectedDates.length === 0 || endDatePicker.selectedDates.length === 0){
+                    alert("Por favor, selecione uma data de início e fim.");
+                    return;
+                }
                 controlButtons.forEach(btn => btn.classList.remove('active'));
                 updateAllTimelines();
             });
@@ -308,8 +332,12 @@
                             body: JSON.stringify({ host: newHost })
                         });
                         if (!response.ok) throw new Error((await response.json()).message);
+                        closeModal();
                         location.reload();
-                    } catch (error) { alert(error.message); }
+                    } catch (error) { 
+                        alert(error.message);
+                        closeModal();
+                    }
                 }
             });
 
@@ -353,10 +381,7 @@
             setInterval(updateStatusFooter, 60 * 1000);
 
             // Atualiza os dados do MTR e timeline a cada minuto
-            setInterval(() => {
-                console.log('Atualizando dados dos hosts...');
-                updateAllTimelines();
-            }, 60 * 1000);
+            setInterval(updateAllTimelines, 60 * 1000);
 
             // Inicia a aplicação
             loadInitialHosts();
