- add -- adicionado nome para identificar os destinos

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,8 @@
         <div class="modal-content">
             <h2>Adicionar Novo Destino</h2>
             <form id="add-host-form">
-                <input type="text" id="new-host-input" placeholder="Digite o IP ou domínio" required>
+                <input type="text" id="new-host-title-input" placeholder="Nome do Destino (Opcional)">
+                <input type="text" id="new-host-input" placeholder="Digite o IP ou domínio do destino" required>
                 <div class="modal-actions">
                     <button type="button" id="cancel-add-host">Cancelar</button>
                     <button type="submit">Adicionar</button>
