feat: Add 1-hour time range option and a new Google host to monitored hosts.

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
 
         <div class="controls">
             <div class="time-range-controls">
+                <button class="control-btn" data-range="1">1h</button>
                 <button class="control-btn active" data-range="3">3h</button>
                 <button class="control-btn" data-range="6">6h</button>
             </div>
