--- a/public/login.html
+++ b/public/login.html
@@ -67,9 +67,10 @@
     </style>
 </head>
 
-<body>
+<body class="auth-page">
     <div class="login-container">
-        <h2>Login</h2>
+        <div id="login-icon-container"></div>
+        <h2>Acesso ao Painel</h2>
         <div id="error-msg" class="error-message"></div>
         <form id="login-form">
             <input type="text" id="username" placeholder="Usuário" required>
