--- a/public/reset-password.html
+++ b/public/reset-password.html
@@ -6,72 +6,78 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redefinir Senha - Monitoramento MTR</title>
     <link rel="stylesheet" href="style.css">
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            padding: 0;
-            margin: 0;
-        }
-
-        .auth-container {
-            background-color: var(--cor-card);
-            padding: 40px;
-            border-radius: 12px;
-            box-shadow: 0 4px 15px var(--cor-sombra);
-            width: 100%;
-            max-width: 400px;
-            text-align: center;
-        }
-
-        .auth-container h2 {
-            margin-top: 0;
-            margin-bottom: 20px;
-            color: var(--cor-texto-cabecalho);
-        }
-
-        .auth-container input {
-            width: 100%;
-            padding: 12px;
-            margin: 10px 0;
-            border-radius: 6px;
-            border: 1px solid #3a3c5a;
-            background-color: var(--cor-terminal-fundo);
-            color: var(--cor-texto);
-            box-sizing: border-box;
-        }
-
-        .auth-container button {
-            width: 100%;
-            padding: 12px;
-            margin-top: 20px;
-            background-color: var(--cor-primaria);
-            color: white;
-            border: none;
-            border-radius: 6px;
-            cursor: pointer;
-            font-size: 1rem;
-        }
-
-        .auth-container button:hover {
-            background-color: var(--cor-primaria-hover, #3b5fde);
-        }
-    </style>
 </head>
 
-<body>
-    <div class="auth-container">
+<body class="auth-page">
+    <div class="login-container">
+        <div id="login-icon-container"></div>
         <h2>Redefinir Senha</h2>
-        <p>Digite sua nova senha.</p>
-        <form id="reset-password-form">
+        <div id="message" class="error-message"></div>
+        <form id="reset-form">
             <input type="password" id="password" placeholder="Nova Senha" required>
             <input type="password" id="confirm-password" placeholder="Confirmar Senha" required>
-            <button type="submit">Salvar Nova Senha</button>
+            <button type="submit">Salvar Senha</button>
         </form>
     </div>
-    <script src="auth.js"></script>
+    <script>
+        // Fetch public config for icon
+        fetch('/api/public-config')
+            .then(res => res.json())
+            .then(config => {
+                if (config.loginIcon) {
+                    const iconContainer = document.getElementById('login-icon-container');
+                    const img = document.createElement('img');
+                    img.src = config.loginIcon;
+                    img.alt = 'Logo';
+                    img.className = 'login-icon';
+                    iconContainer.appendChild(img);
+                }
+            })
+            .catch(err => console.error('Erro ao carregar ícone:', err));
+
+        const urlParams = new URLSearchParams(window.location.search);
+        const token = urlParams.get('token');
+        const messageDiv = document.getElementById('message');
+
+        if (!token) {
+            messageDiv.textContent = 'Token inválido ou ausente.';
+            messageDiv.style.display = 'block';
+            document.getElementById('reset-form').style.display = 'none';
+        }
+
+        document.getElementById('reset-form').addEventListener('submit', async (e) => {
+            e.preventDefault();
+            const password = document.getElementById('password').value;
+            const confirmPassword = document.getElementById('confirm-password').value;
+
+            if (password !== confirmPassword) {
+                messageDiv.textContent = 'As senhas não coincidem.';
+                messageDiv.style.display = 'block';
+                return;
+            }
+
+            try {
+                const res = await fetch('/api/auth/reset-password', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ token, password })
+                });
+                const data = await res.json();
+
+                if (res.ok) {
+                    alert(data.message);
+                    window.location.href = '/login.html';
+                } else {
+                    messageDiv.textContent = data.message;
+                    messageDiv.style.display = 'block';
+                }
+            } catch (error) {
+                console.error(error);
+                messageDiv.textContent = 'Erro ao conectar ao servidor.';
+                messageDiv.style.display = 'block';
+            }
+        });
+    </script>
 </body>
 
 </html>
