feat: Implement configurable login icon via environment variable and update monitored hosts list.

--- a/public/setup-password.html
+++ b/public/setup-password.html
@@ -10,7 +10,9 @@
 
 <body class="auth-page">
     <div class="login-container">
-        <div id="login-icon-container"></div>
+        <div id="login-icon-container">
+            <img src="Logo.png" alt="Logo" class="login-icon">
+        </div>
         <h2>Definir Senha</h2>
         <div id="message" class="error-message"></div>
         <form id="setup-form">
@@ -20,20 +22,7 @@
         </form>
     </div>
     <script>
-        // Fetch public config for icon
-        fetch('/api/public-config')
-            .then(res => res.json())
-            .then(config => {
-                if (config.loginIcon) {
-                    const iconContainer = document.getElementById('login-icon-container');
-                    const img = document.createElement('img');
-                    img.src = config.loginIcon;
-                    img.alt = 'Logo';
-                    img.className = 'login-icon';
-                    iconContainer.appendChild(img);
-                }
-            })
-            .catch(err => console.error('Erro ao carregar ícone:', err));
+
 
         const urlParams = new URLSearchParams(window.location.search);
         const token = urlParams.get('token');
