--- a/public/login.html
+++ b/public/login.html
@@ -6,70 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Painel de Monitoramento</title>
     <link rel="stylesheet" href="style.css">
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            padding: 0 !important;
-            /* Override style.css padding */
-            background-color: var(--cor-fundo);
-        }
 
-        .login-container {
-            background-color: var(--cor-card);
-            padding: 2rem;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
-            width: 100%;
-            max-width: 400px;
-            text-align: center;
-        }
-
-        .login-container h2 {
-            margin-bottom: 1.5rem;
-            color: var(--cor-texto);
-        }
-
-        .login-container input {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 1rem;
-            border: 1px solid #444;
-            border-radius: 4px;
-            background-color: var(--cor-fundo);
-            color: var(--cor-texto);
-            box-sizing: border-box;
-        }
-
-        .login-container button {
-            width: 100%;
-            padding: 10px;
-            background-color: var(--cor-primaria);
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 1rem;
-        }
-
-        .login-container button:hover {
-            background-color: var(--cor-primaria-hover);
-        }
-
-        .error-message {
-            color: var(--cor-remover);
-            margin-bottom: 1rem;
-            display: none;
-        }
-    </style>
 </head>
 
 <body class="auth-page">
     <div class="login-container">
-        <div id="login-icon-container"></div>
+        <div id="login-icon-container">
+            <img src="Logo.png" alt="Logo" class="login-icon">
+        </div>
         <h2>Acesso ao Painel</h2>
         <div id="error-msg" class="error-message"></div>
         <form id="login-form">
