feat: Add log refresh button to modal and update system log entries.

--- a/public/index.html
+++ b/public/index.html
@@ -146,6 +146,8 @@
                 </table>
             </div>
             <div class="modal-actions">
+                <button id="refresh-logs-btn" type="button"
+                    style="background-color: var(--cor-primaria); margin-right: auto;">Atualizar</button>
                 <button type="button" class="cancel-btn">Fechar</button>
             </div>
         </div>
